refactor: add typeorm and tsyringe
