# src/routes/categories.routes.ts
@@ -1,27 +1,29 @@
 import { Router } from "express"
 import multer from "multer"
 
-import createCategoryController from "../modules/cars/useCases/createCategory"
-import { importCategoryController } from "../modules/cars/useCases/importCategory"
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController"
 
-import { listCategoriesController } from "../modules/cars/useCases/listCategories"
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController"
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController"
 
 const categoriesRoutes = Router()
 
 const upload = multer({
   dest: "./tmp",
 })
-categoriesRoutes.post("/", (req, res) => {
-  console.log("reload ")
-  return createCategoryController().handle(req, res)
-})
 
-categoriesRoutes.get("/", (req, res) => {
-  return listCategoriesController.handle(req, res)
-})
+const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesController = new ListCategoriesController()
 
-categoriesRoutes.post("/import", upload.single("file"), (req, res) => {
-  return importCategoryController.handle(req, res)
-})
+categoriesRoutes.post("/", createCategoryController.handle)
+
+categoriesRoutes.get("/", listCategoriesController.handle)
+
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+)
 
 export { categoriesRoutes }
